plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'concat'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {



// 비밀번호 암호화 때문에 추가한거 1개 (윤서)

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // SNS 로그인
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//    implementation 'org.springframework.boot:spring-boot-starter-validation' // SNS 로그인
    implementation 'org.springframework.boot:spring-boot-starter-mail' // 메일 전송
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mindrot:jbcrypt:0.4' // Bcrpyt

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    // AWS S3 *********서윤추가*********
    implementation 'software.amazon.awssdk:s3:2.20.13'
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'

    // javax.annotation *********서윤추가*********
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
}
//*********서윤추가*********
dependencyManagement {
    imports {
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.4.2"
    }
}